tests/paczka1/fuzzy1/21498153.err
Error in line 2: EVle46 A12 79,2
Error in line 1: hUisj2gVB A393 96,0
Error in line 10: rXBbBelW A260 70,0
Error in line 13: 6E4YZce4Bi3 A12 67,3
Error in line 16: 6E4YZce4Bi3 A260 98,1
Error in line 9: fhfwLhoC A393 30,6
Error in line 6: EVle46 A71 52,6
Error in line 19: fhfwLhoC A12 86,6
Error in line 29: fhfwLhoC A71 63,9
Error in line 27: EVle46 A393 98,9
Error in line 34: hUisj2gVB A71 20,6
